# local-audio-diarisation

./: .gitignore  AGENT_RULES.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  Transcribe.cmd  conftest.py  pyproject.toml  requirements.txt  run_diariser.py
.claude/: CONSTITUTION.md  HARNESS.md  SKILLS_AUDIT.md  settings.json
.githooks/: README.md  pre-commit
Bus/: 202604010000_LOG_202604.md  202604291200_PLAN_rewrite-roadmap.md  202604291800_PLAN_adapt-imported-skills.md  202604291931_PLAN_strike-model-boundary-0a-claude-md.md  202604291932_PLAN_strike-model-boundary-0b-write-bus-plan.md  202604291933_PLAN_strike-model-boundary-0c-write-bus-input.md  202604291934_PLAN_strike-model-boundary-0d-execute-plan.md  202604291935_PLAN_strike-model-boundary-0e-skills-impl-guide.md  202604291940_PLAN_RECUR-monthly-claude-md-audit.md  202604291940_PLAN_build-maintain-claude-md-skill.md  202604291950_PLAN_rationalise-claude-md.md  202604300200_PLAN_pre-commit-line-cap-hook.md  202604300210_PLAN_skill-usage-logging.md  202604300220_PLAN_skill-usage-audit-skill.md  202605010000_LOG_202605.md  202605011400_PLAN_build-plan-pipeline-orchestrator.md  202605011410_PLAN_create-ideate-skill.md  202605011420_PLAN_create-audit-haiku-safe-skill.md  202605011425_PLAN_create-audit-sufficiency-skill.md  202605011430_PLAN_create-plan-pipeline-skill.md  202605011440_PLAN_dogfood-plan-pipeline.md  202605011700_PLAN_note-jot.md  202605011900_PLAN_post-dogfood-fixes.md  202605012100_PLAN_f1-smoke-test.md  202605012200_PLAN_closeout-orchestrator-build.md  (+9 more)
Workbench/: .index.json  (+7 more)
(+142 files in other folders)
